# SVT-AV1

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_guide.md  output.csv  repomix-output.txt  requirements.txt  test_frame.py
Source/API/: EbDebugMacros.h  EbSvtAv1.h  EbSvtAv1Enc.h
Source/App/: CMakeLists.txt  app_config.c  app_main.c  app_process_cmd.c  tl26_feedback.c  tl26_feedback.h  tl26_flags.h  tl26_functions.c
Source/Lib/: CMakeLists.txt
Source/Lib/ASM_NEON/: highbd_inv_txfm_neon.c
Source/Lib/Codec/: CMakeLists.txt  ec_process.c  enc_dec_process.c  enc_mode_config.c  entropy_coding.c  global_me.c  mode_decision.c  packetization_process.c  pass2_strategy.c  pic_buffer_desc.c  product_coding_loop.c  rc_process.c  temporal_filtering.c  tl26_flags.h  tl26_request.c  tl26_request.h
Source/Lib/Globals/: CMakeLists.txt  app_bridge.c  app_bridge.h  enc_callbacks.c  enc_callbacks.h  enc_handle.c  enc_handle.h  rl_feedback.c  rl_feedback.h
Source/tl26/: CMakeLists.txt  sb_feedback.c  sb_feedback.h  tl26_feedback.c  tl26_feedback.h  tl26_flags.h  tl26_functions.c  tl26_python_thread.c  tl26_python_thread.h  tl26_request.c  tl26_request.h  tl26_sb_feedback.c  tl26_sb_feedback.h  tl26_utils.h
cmake/toolchains/: mac_toolchain.cmake
graphing/: gather_trace.sh  parser.py  test.bash  video_download.sh  video_sources.txt
logs/tensorboard/ppo_run_2/: events.out.tfevents.1749870467.LAPTOP-HDIKDMKL.17751.0
logs/tensorboard/ppo_run_3/: events.out.tfevents.1749870561.LAPTOP-HDIKDMKL.18234.0
new_package/: CMakeLists.txt  readme.md  setup.py
new_package/tl26/: QP.py  feedback.py  global_variables.py  main.py  quantization_parameter.py  request.py  train.py  utils.py
new_package/tl26.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
new_package/tl26/dqn/: agent.py  model.py  train.py
new_package/tl26/gym/: a.py
playground/: test.py
python-gym/: CMakeLists  CMakeLists.txt  CmakeLists.txt  pyproject.toml  repomix-output.txt  run_env.py  test.py  test_copy.py
python-gym/src/av1gym/environment/: __init__.py  actorcritic.py  constants.py  environment.py  extractor.py  norm.py  runner.py
python-gym/src/av1gym/environment/utils/: av1_decoder.py  debug_utils.py  video_reader.py  video_utils.py
python-gym/src/av1gym/pyencoder/: __init__.py  _binding.cpp  _binding.py
python-gym/src/av1gym/pyencoder/bridge/: cb_registration.cpp  cb_registration.hpp  pybridge.cpp  pybridge.h  utils.cpp
python-gym/src/bridge/: app_entry.c  app_entry.h  cb_registration.c  cb_registration.cpp  cb_registration.h  cb_registration.hpp  cb_validation.c  cb_validation.h  py_trampoline.c  py_trampoline.h  pybridge.c  pybridge.cpp  pybridge.h  utils.hpp
python-gym/src/environment/: __init__.py  av1-env.py
python-gym/src/main/: train_refactor.py
python-gym/src/pyencoder/: __init__.py  _binding.c  _binding.cpp  callback.py
python-gym/src/pyencoder/environment/: av1_env.py  av1_runner.py  av1_running_env.py  constants.py  inference.py  log.txt  naive_env.py  train.py  train_refactor.py  utils.py
python-gym/src/pyencoder/environment/rl_training_output/: eval_monitor.monitor.csv
python-gym/src/pyencoder/environment/rl_training_output/monitor_logs/: monitor.csv
python-gym/src/pyencoder/environment/rl_training_output/tensorboard/ppo_run_1/: events.out.tfevents.1749513312.leapx06.1411256.0
python-gym/src/pyencoder/environment/rl_training_output/tensorboard/ppo_run_2/: events.out.tfevents.1749513784.leapx06.1412359.0
python-gym/src/pyencoder/environment/rl_training_output/tensorboard/ppo_run_3/: events.out.tfevents.1749513869.leapx06.1412781.0
python-gym/src/pyencoder/environment/rl_training_output/tensorboard/ppo_run_4/: events.out.tfevents.1749513928.leapx06.1412977.0
python-gym/src/pyencoder/environment/rl_training_output/tensorboard/ppo_run_5/: events.out.tfevents.1749514008.leapx06.1413514.0
python-gym/src/pyencoder/environment/rl_training_output/tensorboard/ppo_run_6/: events.out.tfevents.1749514351.leapx06.1415439.0
python-gym/src/pyencoder/environment/rl_training_output/tensorboard/ppo_run_7/: events.out.tfevents.1749514750.leapx06.1416907.0
python-gym/src/pyencoder/states/: __templete.py  abstract.py  naieve_state.py  naive.py  tom_test.py
python-gym/src/pyencoder/utils/: sb_processing.py  video_reader.py
python-plugin/: pyproject.toml
training_repo/: start_training.sh
