[project]
name = "av1-gym"
dynamic = ["version"]
authors = [{ name = "TL26" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "gymnasium>=0.29", 
  "numpy>=2.1.3", 
  "opencv-python>= 4.10", 
  "pybind11>=2.13.6", 
  "av>=14.4.0"
]

[build-system]
requires = [
  "scikit-build-core>=0.11",
  "setuptools_scm>=7",
  "pybind11_stubgen>=2"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/av1gym"]
install.strip = false

[tool.scikit-build.cmake]
define = { SVT_ENABLE_USER_CALLBACKS = "ON" }
args = [
    "-DCMAKE_BUILD_TYPE=Debug",
    "-DCMAKE_C_FLAGS=-g",
    "-DCMAKE_CXX_FLAGS=-g",
    "-DCMAKE_INSTALL_DO_STRIP=OFF",
    "-DFROM_PIP_INSTALL=1",
]