[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SVT-AV1"
version = "2020.0.0"
dependencies = []
requires-python = ">=3.8"
authors = [
  {name = "Theo Siemens-Rhodes", email = "theo.siemensrhodes@gmail.com"},
  {name = "Alex Evans", email = "example@example.com"},
  {name = "Jiajun Huang", email = "example@example.com"},
  {name = "Jiayue Yang", email = "example@example.com"},
  {name = "Tom Wang", email = "example@example.com"},
]
description = "SVT-AV1 Python bindings/plugin for dynamic QP manipulation."
readme = "README.md"
license = "BSD+Patent"
license-files = ["../LICENSE*"]
keywords = [
  "av1",
  "video",
  "codec",
  "encoder",
  "svt-av1"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "License :: OSI Approved :: BSD License"
]

[project.urls]
Homepage = "https://github.com/TL26-ubc/SVT-AV1/python-plugin"
Repository = "https://github.com/TL26-ubc/SVT-AV1.git"
